fixing hero on small resolutions

--- a/src/pages/industries/index.module.scss
+++ b/src/pages/industries/index.module.scss
@@ -50,6 +50,10 @@
         &__content{
           padding-bottom: rem(22px);
           *{margin: 0;}
+          @include respond-to("<=s") {
+            display: grid;
+            justify-content: center;
+          }
           h2 {
             color: white;
             font-family: $font-tertiary;
@@ -87,6 +91,13 @@
           img {
             object-fit: cover;
           }
+        }
+        &__cyan {
+          width: 100%;
+          height: 84px;
+          background-color: $color-cyan;
+          position: absolute;
+          bottom: 0;
         }
         &__elipse {
           max-width: none !important;
